syntax = "proto3";
package kakakv.net.message;
message RequestVoteMessage{
  uint64 term = 1;
  string candidateId = 2;
  uint64 lastLogIndex = 3;
  uint64 lastLogTerm = 4;
}

message RequestVoteResponseMessage{
  uint64 term = 1;
  bool voteGranted = 2;
}

message AppendEntriesMessage{
  uint64 term = 1;
  string leaderId = 2;
  uint64 prevLogIndex = 3;
  uint64 prevLogTerm = 4;
  uint64 leaderCommit = 5;
  message Entry{
    enum Kind{
      GeneralLog = 0;
      NoOpLog = 1;
    }
    Kind kind = 1;
    uint64 index = 2;
    uint64 term = 3;
    optional bytes data = 4;
  }
  repeated Entry entryList = 6;
}

message AppendEntriesResponseMessage{
  uint64 term = 1;
  bool success = 2;
}